# tanki

./: .gitignore  Dockerfile  pyproject.toml
ankiweb/: __init__.py  main.py  models.py  schemas.py
