[tool.poetry]
name = "tanki"
version = "0.1.0"
description = "Ankiweb telegram client"
authors = ["Squirrel Torque Studio"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
